--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,66 +1,393 @@
-/* VARIABLES */
-/* MIX-INS */
-/* STYLES BEGIN */
-body {
-  font: 100% Helvetica, sans-serif;
-  color: #193441;
-  background-color: #fcfff5;
+* {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-header {
-  background-color: #91aa9d;
-  height: 15%;
-  width: 100%;
-  border-bottom: 1px solid black;
-  text-align: center;
+body {
+  font-family: 'HelveticaNeue';
+  color: #333;
+  -webkit-font-smoothing: antialiased;
 }
-header .navbar {
-  width: 100%;
-  text-align: center;
+
+strong {
+  font-family: 'HelveticaNeue-Bold';
+  font-weight: normal;
 }
-header .navbar ul.nav {
-  list-style: none;
-  margin: 1% 0;
-  padding: 0;
+
+em {
+  font-family: 'HelveticaNeue-Italic';
 }
-header .navbar ul.nav li {
-  display: inline;
-  list-style: none;
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
 }
-header .navbar ul.nav li a {
-  margin: 0 5%;
-  color: #000;
+
+h1 {
+  font-family: 'HelveticaNeue';
+}
+
+a {
+  color: inherit;
   text-decoration: none;
 }
-header .navbar ul.nav li a:hover {
-  text-decoration: underline;
-}
-header .navbar ul.nav li a.active, header .navbar ul.nav li a.active:hover {
-  font-weight: bold;
+
+/**
+ * Header
+ */
+
+header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 1em;
+  border-bottom: 1px dotted #CCC;
 }
 
+  header h1 {
+    margin: 0;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+
+    font-family: 'HelveticaNeue-Light';
+  }
+
+  header h1 a {
+    text-decoration: none;
+    -webkit-transition: color 300ms;
+    transition: color 300ms;
+  }
+
+  header h1 a:hover {
+    color: #fec324;
+  }
+
+header nav {
+
+}
+
+  header nav a {
+    display: inline-block;
+    margin: 0 0 0 1em;
+    padding: 0.35em 0.75em;
+    background-color: transparent;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+    border-radius: 20px;
+  }
+
+  header nav a:hover {
+    background-color: #379ae9;
+
+    color: #FFF;
+  }
+
+/**
+ * Main
+ */
+
+.main-content {
+  margin: 0 auto;
+  padding: 1em;
+}
+
+/**
+ * General
+ */
+
+.avatar {
+  border-radius: 100%;
+}
+
+button {
+  padding: 0.5em 1em;
+  background-color: #50b1ff;
+  border: none;
+  -webkit-transition: background-color 300ms;
+  transition: background-color 300ms;
+  outline: none;
+
+  color: #FFF;
+  font-family: 'HelveticaNeue-Light';
+  font-weight: normal;
+}
+
+button:hover {
+  background-color: #379ae9;
+}
+
+/**
+ * Posts
+ */
+
+.posts {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/**
+ * Post
+ */
+
 .post {
-  width: 75%;
-  margin: 5% auto;
+  margin: 0 auto;
+  padding: 1em;
+  width: 40em;
 }
-.post p {
-  clear: both;
-  padding: 1%;
-  background-color: #d1dbbd;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  border-radius: 10px;
-  border: 1px solid black;
+
+  @media screen and (max-width: 39em) {
+    .post  {
+      width: auto;
+    }
+  }
+
+  .post-header {
+    margin: 0.5em 0;
+    text-align: center;
+  }
+
+  .post-avatar {
+    height: 50px;
+  }
+
+  .post-author {
+    margin-top: 0.5em;
+
+    font-family: 'HelveticaNeue-Medium';
+  }
+
+  .post-date {
+    color: #999;
+    font-size: 0.8em;
+  }
+
+  .post-title {
+    margin: 0.5em 0;
+
+    font-size: 4em;
+    font-family: 'HelveticaNeue-UltraLight';
+  }
+
+  .post-content {
+    margin-bottom: 2em;
+    padding-bottom: 2em;
+    border-bottom: 1px dotted #999;
+
+    font-size: 1.1em;
+    line-height: 1.5;
+  }
+
+  .post-content a {
+    color: #118CD9;
+  }
+
+  .post-content a:hover {
+    color: #08428C;
+  }
+
+  .post-comments {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+    .post-comments-header {
+      font-size: 1.5em;
+      font-family: 'HelveticaNeue-Italic';
+    }
+
+    .post-comment {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 0 0 2em 0;
+      padding: 0 0 2em 0;
+      border-bottom: 1px dotted #CCC;
+    }
+
+    .post-comment-avatar {
+      width: 40px;
+      height: 42px;
+    }
+
+    .post-comment-author {
+
+    }
+
+    .post-comment-date {
+      display: inline-block;
+      margin: 0 0 0 0.25em;
+
+      color: #999;
+    }
+
+    .post-comment-body {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      padding: 0 0 0 1em;
+
+      font-size: 0.9em;
+    }
+
+    .post-comment-body a {
+      color: #118CD9;
+    }
+
+    .post-comment-body a:hover {
+      color: #08428C;
+    }
+
+    .post-comment-meta {
+      margin: 0 0 0.75em 0;
+
+      font-size: 0.9em;
+    }
+
+    .post-comment-new {
+      display: block;
+      border-bottom: none;
+    }
+
+      .post-comment-new input,
+      .post-comment-new textarea {
+        width: 100%;
+        margin: 0 0 1em 0;
+        padding: 0.5em;
+        border: 1px solid #CCC;
+
+        font-family: 'HelveticaNeue-Light';
+      }
+
+      .post-comment-new textarea {
+        min-height: 5em;
+      }
+
+/**
+ * Post Slug
+ */
+
+.post-slug {
+  padding: 0.5em 0;
 }
-.post h2 {
-  padding: 1%;
-  float: left;
+
+  .post-slug-header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    margin: 0.5em 0;
+
+    font-size: 3em;
+    font-family: 'HelveticaNeue-UltraLight';
+  }
+
+    .post-slug-date {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      margin: 0 0.1em 0 0;
+      padding: 0 0.5em;
+      border: 1px dotted #CCC;
+
+      font-size: 3rem;
+      text-align: center;
+      color: #CCC;
+    }
+
+      .post-slug-date-item {
+        line-height: 1;
+      }
+
+      .post-slug-date-month {
+        font-size: 0.5em;
+        text-transform: uppercase;
+
+        font-family: 'HelveticaNeue-Light';
+      }
+
+      .post-slug-date-day {
+         font-family: 'HelveticaNeue-Light';
+      }
+
+    .post-slug-title {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: stretch;
+      -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+      align-items: stretch;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      margin: 0;
+    }
+
+    .post-slug-title a {
+      display: inline-block;
+      padding: 0.25em 0.45em;
+      background-color: transparent;
+      -webkit-transition: all 300ms;
+      transition: all 300ms;
+      max-width: 100%;
+
+      text-decoration: none;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .post-slug-title a:hover {
+      background-color: #50b1ff;
+
+      color: #FFF;
+    }
+
+/**
+ * Post Publish
+ */
+
+.post-publish {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
-.post h2 a {
-  color: #000;
-}
-.post span {
-  padding: 1%;
-  float: right;
-}
+
+  .post-publish > li {
+    margin: 0 0 0.25em 0;
+    padding: 0.25em 0;
+  }
+
+  .post-publish input,
+  .post-publish textarea {
+    width: 100%;
+    padding: 0.5em;
+    border: 1px solid #CCC;
+
+    font-family: 'HelveticaNeue-Light';
+  }
+
+  .post-publish textarea {
+    min-height: 5em;
+  }
